[gd_scene load_steps=13 format=3 uid="uid://behm6bw1byxg7"]

[ext_resource type="Script" path="res://combat/CombatArena.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://ct6u108xq3ufy" path="res://combat/background/StonePlatform.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://dskvhy4p1owdw" path="res://interface/menus/Defeat.tscn" id="2_7w0aa"]
[ext_resource type="PackedScene" uid="uid://fyrapr6hpik" path="res://combat/turn_queue/TurnQueue.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://cr5xa42nhsok2" path="res://combat/battlers/PorcupineBattler.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://l0fo5xge4si7" path="res://combat/battlers/BlueBattler.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://3c05oc51ap55" path="res://combat/battlers/DanBattler.tscn" id="6"]
[ext_resource type="PackedScene" uid="uid://datcxlilh1pry" path="res://combat/battlers/EnemyBattler.tscn" id="6_q2q3l"]
[ext_resource type="Script" path="res://combat/interface/CombatInterface.gd" id="7"]
[ext_resource type="PackedScene" uid="uid://bfyw06ve2bwb" path="res://combat/interface/SelectArrow.tscn" id="8"]
[ext_resource type="PackedScene" uid="uid://c4w4f1yl8gh8b" path="res://combat/interface/lifebar/LifebarsBuilder.tscn" id="10"]
[ext_resource type="PackedScene" uid="uid://dkxsk27v7nwim" path="res://interface/menus/VictoryScreen.tscn" id="11_xiats"]

[node name="CombatArena" type="Node2D"]
script = ExtResource("1")

[node name="DefeatScreen" parent="." instance=ExtResource("2_7w0aa")]
visible = false

[node name="VictoryScreen" parent="." instance=ExtResource("11_xiats")]
visible = false

[node name="SpawnPositions" type="Node" parent="."]

[node name="Monsters" type="Node" parent="SpawnPositions"]

[node name="1" parent="SpawnPositions/Monsters" instance=ExtResource("2")]
visible = false
position = Vector2(746, 357.096)

[node name="2" parent="SpawnPositions/Monsters" instance=ExtResource("2")]
visible = false
position = Vector2(426, 517.096)

[node name="3" parent="SpawnPositions/Monsters" instance=ExtResource("2")]
visible = false
position = Vector2(618, 776.096)

[node name="4" parent="SpawnPositions/Monsters" instance=ExtResource("2")]
visible = false
position = Vector2(798, 543)

[node name="Party" type="Node" parent="SpawnPositions"]

[node name="1" parent="SpawnPositions/Party" instance=ExtResource("2")]
visible = false
position = Vector2(1285.1, 453.096)

[node name="2" parent="SpawnPositions/Party" instance=ExtResource("2")]
visible = false
position = Vector2(1376, 672)

[node name="TurnQueue" parent="." instance=ExtResource("3")]
z_index = 10

[node name="EnemyBattler" parent="TurnQueue" instance=ExtResource("6_q2q3l")]
position = Vector2(798, 543)

[node name="Porcupine" parent="TurnQueue" instance=ExtResource("4")]
position = Vector2(749, 351)

[node name="Porcupine2" parent="TurnQueue" instance=ExtResource("4")]
position = Vector2(426, 517.096)

[node name="Porcupine3" parent="TurnQueue" instance=ExtResource("4")]
position = Vector2(618, 776.096)

[node name="Blue" parent="TurnQueue" instance=ExtResource("5")]
position = Vector2(1285.1, 453.096)
party_member = true

[node name="Dan" parent="TurnQueue" instance=ExtResource("6")]
position = Vector2(1376, 672)
party_member = true

[node name="CombatInterface" type="CanvasLayer" parent="."]
layer = 100
script = ExtResource("7")

[node name="SelectArrow" parent="CombatInterface" instance=ExtResource("8")]
position = Vector2(-39, -51)

[node name="ActionSelector" type="Control" parent="CombatInterface"]
layout_mode = 3
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -171.0
grow_horizontal = 0
grow_vertical = 2

[node name="ItemList" type="ItemList" parent="CombatInterface/ActionSelector"]
visible = false
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_top = -70.0
offset_right = 65.0
offset_bottom = 70.0
item_count = 3
item_0/text = "Slash"
item_1/text = "Crush"
item_1/disabled = true
item_2/text = "Anihilate"

[node name="LifebarsBuilder" parent="CombatInterface" instance=ExtResource("10")]

[node name="Timeline" type="HBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 695.0
offset_top = 120.0
offset_right = 955.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.8, 1.953)

[node name="TimelineSlot" type="Panel" parent="Timeline"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Timeline/TimelineSlot"]
layout_mode = 0
offset_left = -2.0
offset_right = 25.0
offset_bottom = 26.0
scale = Vector2(1.5, 1.5)
expand_mode = 1
stretch_mode = 4

[node name="Sprite2D" type="Sprite2D" parent="Timeline/TimelineSlot"]
visible = false

[node name="TimelineSlot2" type="Panel" parent="Timeline"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Timeline/TimelineSlot2"]
layout_mode = 0
offset_right = 26.0
offset_bottom = 26.0
scale = Vector2(1.5, 1.5)
expand_mode = 1
stretch_mode = 4

[node name="Sprite2D" type="Sprite2D" parent="Timeline/TimelineSlot2"]
visible = false

[node name="TimelineSlot3" type="Panel" parent="Timeline"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Timeline/TimelineSlot3"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 41.0
expand_mode = 1
stretch_mode = 4

[node name="Sprite2D" type="Sprite2D" parent="Timeline/TimelineSlot3"]
visible = false

[node name="TimelineSlot4" type="Panel" parent="Timeline"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Timeline/TimelineSlot4"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
expand_mode = 1
stretch_mode = 4

[node name="Sprite2D" type="Sprite2D" parent="Timeline/TimelineSlot4"]
visible = false

[node name="TimelineSlot5" type="Panel" parent="Timeline"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Timeline/TimelineSlot5"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
expand_mode = 1
stretch_mode = 4

[node name="Sprite2D" type="Sprite2D" parent="Timeline/TimelineSlot5"]
visible = false

[connection signal="item_selected" from="CombatInterface/ActionSelector/ItemList" to="CombatInterface" method="_on_ItemList_item_selected"]
